Update package.json Fix test error

--- a/bower.json
+++ b/bower.json
@@ -9,13 +9,13 @@
     "backbone-amd": "~1.0.0",
     "underscore-amd": "~1.4.4",
     "modernizr": "~2.6.2",
-    "backbone.marionette": "~1.0.2",
+    "backbone.marionette": "~1.6.0",
     "backbone.wreqr": "~0.2.0",
     "backbone.babysitter": "~0.0.6",
     "require-handlebars-plugin": "~0.4.0",
     "mocha": "~1.12.0",
     "chai": "~1.7.2",
-    "sinon": "~1.7.3",
+    "sinonjs": "~1.7.3",
     "requirejs-i18n": "~2.0.4"
   },
   "devDependencies": {
