--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "marionette",
   "version": "0.0.1",
-  
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-copy": "~0.4.0",
@@ -28,7 +27,8 @@
     "jshint-stylish": "~0.1.3",
     "grunt-exec": "~0.4.2",
     "grunt-contrib-watch": "~0.4.4",
-    "time-grunt": "~0.1.1"
+    "time-grunt": "~0.1.1",
+    "grunt-contrib-less": "~0.11.0"
   },
   "engines": {
     "node": ">=0.8.0"
