--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "sinonjs": "~1.7.3",
     "requirejs-i18n": "~2.0.4",
     "q": "1.0.1",
-    "bootstrap-less": "~3.1.1"
+    "bootstrap-less": "~3.1.1",
+    "components-font-awesome": "~4.0.3"
   },
   "devDependencies": {},
   "directory": "bower_components"
